# Haskell-practice

./: Detail.txt  Ex01.hs  Ex02.hs  Ex03.hs  Ex05.hs  Ex06.hs  Ex07.hs  Ex08.hs  Ex09.hs  README.md  add.hs  hello.hs
3141ass1/: Main.hi  Physics.hi  Simulation.hi  Simulation.hs  Test.hs  Visualise.hi  World.hi  test.hs
3141ass2/: Formula.hs  Solver.hs
Ex01/Ex1.hsproj/: Ex01.hs~  Ex1.cabal  _Ex01.hsplay
Ex01/__MACOSX/Ex1.hsproj/: ._Ex01.hs  ._Ex1.cabal  ._LineGraphics.hs  .__Ex01.hsplay  ._stack.yaml
